# EC-to-beta-plus-decay-in-Na22

./: README.md
rdecay02/Other/: #Project.lyx#  CMakeLists.txt  Project.lyx
rdecay02/Other/Al-befoe-Det-Data/: DetectorConstruction.cc  DetectorConstruction.hh  SteppingAction.cc  plot_gamma_histogram.cpp  run.mac
rdecay02/Other/One-detector-updated/Cones_baseline/10M/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/Cones_baseline/1M/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/Cones_baseline/withCones_withoutTubes/10M/: H11_data.csv  H16_data.csv  H18_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/Cones_baseline/withCones_withoutTubes/1M/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/With_Cones/: README.txt
rdecay02/Other/One-detector-updated/With_Cones/0.05mm/: H11_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/With_Cones/0.1mm/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/With_Cones/0.5mm/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/With_Cones/1mm/10M/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/With_Cones/1mm/1M/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/With_Cones/2mm/10M/: H11_data.csv  H16_data.csv  H19_data.csv
rdecay02/Other/One-detector-updated/first try/: Run_summary.txt
rdecay02/Other/One-detector-updated/secondTry-withoutParticalGun/: H11_data.csv  H17_data.csv  H19_data.csv
(+81 files in other folders)
